--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- code with pardeep  -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -254,7 +254,7 @@
                 <i class="fa fa-star-half-o"></i>
                </div>
                <img src="images/user-1.png">
-               <h3>Rookmani Gupta</h3>
+               <h3>abc Gupta</h3>
            </div>
            <div class="col-3">
             <i class="fa fa-quote-left"></i>
@@ -267,7 +267,7 @@
                 <i class="fa fa-star"></i>
                </div>
                <img src="images/user-2.png">
-               <h3>Pardeep Kumar</h3>
+               <h3>xyz Kumar</h3>
            </div>
            <div class="col-3">
             <i class="fa fa-quote-left"></i>
